--- a/.github/workflows/ci_c_pipeline.yaml
+++ b/.github/workflows/ci_c_pipeline.yaml
@@ -52,11 +52,13 @@ jobs:
           kubectl create secret generic ${SERVICE}-db-secret \
           --from-literal=DATABASE_URL=postgresql://${{ secrets.DATABASE_USER }}:${{ secrets.DATABASE_PASSWORD }}@${{ secrets.DATABASE_ENDPOINT }}:5432/${{ secrets.DATABASE_NAME }} || echo "Secret already exists"
 
-      - name: Build & Push Docker Image to Artifact Registry
+      - name: Authenticate Docker with Artifact Registry
+        run: gcloud auth configure-docker ${{ secrets.GKE_REGION }}-docker.pkg.dev
+
+      - name: Build & Push Docker Image to GCP
         run: |
-          gcloud auth configure-docker us-central1-docker.pkg.dev
-          docker build -t us-central1-docker.pkg.dev/$GCP_PROJECT_ID/my-repo/$SERVICE:latest .
-          docker push us-central1-docker.pkg.dev/$GCP_PROJECT_ID/my-repo/$SERVICE:latest
+          docker build -t ${{ secrets.GKE_REGION }}-docker.pkg.dev/$GCP_PROJECT_ID/moon-insurance/$SERVICE:latest .
+          docker push ${{ secrets.GKE_REGION }}-docker.pkg.dev/$GCP_PROJECT_ID/moon-insurance/$SERVICE:latest
 
       - name: Deploy to GKE
         run: |
