--- a/k8s/deployment-green.yaml
+++ b/k8s/deployment-green.yaml
@@ -1,16 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: agent-service-deployment
+  name: agent-service-green
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: agent-service
+      version: green
   template:
     metadata:
       labels:
         app: agent-service
+        version: green
     spec:
       containers:
         - name: agent-service
