--- a/k8s/deployment-green.yaml
+++ b/k8s/deployment-green.yaml
@@ -19,6 +19,13 @@ spec:
           image: GCP_REGION-docker.pkg.dev/GCP_PROJECT_ID/moon-insurance/agent-service:latest
           ports:
             - containerPort: 5002
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
           env:
             - name: DATABASE_URL
               valueFrom:
