--- a/k8s/integration-test-cron.yaml
+++ b/k8s/integration-test-cron.yaml
@@ -4,6 +4,10 @@ metadata:
   name: integration-test-agent-service
 spec:
   schedule: "0 * * * *" # Run every hour (at the start of the hour)
+  # Keep only the most recent successful and failed jobs
+  successfulJobsHistoryLimit: 1
+  failedJobsHistoryLimit: 1
+  # Prevent concurrent runs if the previous one hasn't finished yet
   jobTemplate:
     spec:
       ttlSecondsAfterFinished: 600 # Keep pod for 10 min after completion
@@ -13,6 +17,7 @@ spec:
           containers:
             - name: integration-test-agent-service
               image: us-central1-docker.pkg.dev/moon-insurance/moon-insurance/agent-service:latest
+              imagePullPolicy: IfNotPresent #avoids unnecessary pulls if the image is already present on the node.
               command: ["pytest", "tests/integration-test.py"]
               resources:
                 requests:
